--- a/.github/workflows/torrent.yml
+++ b/.github/workflows/torrent.yml
@@ -5,11 +5,11 @@ on:
       - master
       
 env:
-  name: "Firefox Setup 84.0"
-  comment: "Firefox Setup 84.0"
-  url: "https://cdn.stubdownloader.services.mozilla.com/builds/firefox-latest-ssl/en-US/win64/3fdd1318dfa06611263ee86c0c74dcd76fde4cf6763ea411e758b97a0578dee6/Firefox%20Setup%2084.0.exe"
-  file_name: "Firefox Setup 84.0.exe"
-  piece_size: 19 # Check the README.md for recommended piece size
+  name: "RE4"
+  comment: "Resident Evil 4 "
+  url: "http://dl.coolrom.com.au/dl/41800/-1RGZnWdRy6Lr7N4vxbHOw/1609685342/"
+  file_name: "ROM RESIDENT EVIL 4"
+  piece_size: 19 # 2^21
       
 jobs:
   create:
